--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="src/app.js"></script>
+  <script src="app.ts"></script>
 </body>
 </html>
